<resources>
    <string name="app_name">ReTo</string>
    <string name="app_name1">ReTo:\n Recycle Together</string>
    <string name="title_home">Home</string>
    <string name="title_knowledge">Knowledge</string>
    <string name="title_scan">Scan</string>
    <string name="title_news">News</string>
    <string name="title_history">History</string>
    <string name="scan_content_description">Scan button to start the scan process</string>
    <string name="app_logo">App Logo</string>
    <string name="description">Start your journey\n to easy waste sorting!</string>
    <string name="titleFragmentHome">Hai, Sobat Reto! 🌱</string>
    <string name="descFragmentHome">Pilah sampahmu, mulailah recycle!</string>
    <string name="see_all">see all</string>
    <string name="type_waste">Types of Waste</string>
    <string name="scan_history">Scan History</string>
    <string name="all">All</string>
    <string name="organic">Organic</string>
    <string name="nonOrganic">Non Organic</string>
    <string name="judulNews">Title News</string>
    <string name="desc">Description</string>
    <string name="capture">Ambil Gambar</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="email_error">Email tidak boleh kosong</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_error">Jumlah password kurang dari 6 karakter</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="message_login_and_signup_page">Mohon lengkapi data berikut</string>
    <string name="email">Email</string>
    <string name="hintEmail">Masukkan Email Anda</string>
    <string name="password">Password</string>
    <string name="title_login_page">Yuk Pilah Sampah Bersama Reto!</string>
    <string name="hintPassword">Masukkan Password Anda</string>
    <string name="cannot_empty">Data Tidak Boleh Kosong</string>
    <string name="register_account">Registrasi Akun</string>
    <string name="login_account">Masuk Akun</string>
    <string name="liqiud_waste">Limbah Cair</string>
    <string name="solid_waste">Limbah Padat</string>
    <string name="organic_waste">Sampah Organik</string>
    <string name="Hazardous_waste">Limbah Berbahaya</string>
    <string name="noAccount">Belum Punya Akun? Daftar</string>
    <string name="title_detail_history">Detail History</string>
    <string name="title_detail_knowledge">Detail Knowledge</string>
    <string name="title_result">Result</string>
    <string name="recomendation">Rekomendasi Untukmu</string>
    <string name="title_upload">Upload</string>
    <string name="letsScan">Mari Pindai Sampah dengan ReTo!</string>
    <string name="analyze">Analisa</string>
    <string name="deleteImage">Delete Image</string>
    <string name="preview_camera">Preview Camera</string>
    <string name="cropImage">Image Crop</string>
    <string name="save">Save</string>
    <string name="getstarted">Mulai</string>
    <string name="title_about">About</string>
    <string name="titleAbout">Reto: Recycle Together 🌍♻️</string>
    <string name="slogan">A smart solution for waste management and environmental awareness.</string>
    <string name="pembatas">----------------------------------------------</string>
    <string name="descAbout">Got waste? Meet ReTo: Recycle Together, the app that makes waste management smarter and simpler! Just scan, and the app will detect the type of waste you’re holding – plastic, paper, or anything in between – and provide guidance on how to handle it properly.\n\nBut that’s not all! ReTo also comes with educational content about different types of waste and their impact, along with the latest news.\n\nSay goodbye to confusion and hello to a cleaner, greener future. Let’s manage waste easily and effectively with ReTo!</string>
    <string-array name="data_image">
        <item>@drawable/liqiud_waste</item>
        <item>@drawable/solid_waste</item>
        <item>@drawable/organic_waste</item>
        <item>@drawable/hazardous_waste</item>
    </string-array>
    <string-array name="data_name">
        <item>Limbah Cair</item>
        <item>Limbah Padat</item>
        <item>Sampah Organik</item>
        <item>Limbah Berbahaya</item>
    </string-array>
    <string-array name="data_description">
        <item>Limbah cair merupakan sisa buangan berbentuk cair yang dihasilkan dari berbagai kegiatan manusia, seperti rumah tangga, industri, pertanian, dan komersial. Limbah ini sering kali mengandung bahan kimia, partikel padatan, atau zat biologis yang dapat mencemari lingkungan jika tidak dikelola dengan baik.</item>
        <item>Limbah padat mencakup berbagai jenis sampah yang dihasilkan dari aktivitas manusia, termasuk material yang sulit terurai seperti kaca, keramik, plastik, kertas, logam, dan kaleng. Setiap jenis limbah padat ini memiliki karakteristik yang mempengaruhi cara pengelolaannya.</item>
        <item>Sampah organik merupakan jenis limbah yang berasal dari bahan-bahan alami seperti sisa makanan, daun, ranting, atau daging busuk, yang dapat terurai secara alami oleh mikroorganisme. Sampah ini umumnya ditemukan di rumah tangga, terutama dari sisa makanan dan limbah kebun.</item>
        <item>Limbah berbahaya merupakan jenis limbah yang mengandung bahan beracun, mudah terbakar, korosif, atau reaktif, sehingga menimbulkan risiko besar terhadap lingkungan dan kesehatan manusia. Limbah ini dapat berasal dari berbagai sumber, termasuk industri, rumah sakit, laboratorium, dan rumah tangga.</item>
    </string-array>
    <string-array name="data_example">
        <item>Contoh :\n
            •   Air bekas cucian dari rumah tangga\n
            •   Limbah industri seperti air sisa pabrik tekstil\n
            •   Air irigasi yang mengandung pestisida atau pupuk dari sektor pertanian\n
            •   Di rumah sakit, cairan medis atau kimia yang terkontaminasi</item>
        <item>Contoh :\n
            •	Kaca dan Keramik : \nLimbah kaca sering kali berasal dari botol, kaca pecah, atau kemasan kaca lainnya. Keramik, yang meliputi pecahan porselen atau alat makan yang rusak, juga termasuk dalam kategori limbah padat. Keduanya dapat bertahan lama di lingkungan karena tidak dapat terurai secara alami. \n\n
            •	Plastik : \nLimbah plastik merupakan salah satu jenis sampah yang paling umum dan mencemari lingkungan. Produk plastik seperti kantong plastik, botol, kemasan makanan, dan sisa produk lainnya seringkali berakhir di tempat pembuangan akhir dan dapat mencemari tanah dan air karena plastik membutuhkan waktu ratusan tahun untuk terurai. \n\n
            •	Kertas : \nLimbah kertas berasal dari berbagai produk, seperti koran, majalah, kotak kemasan, dan kertas kantor. Meskipun dapat didaur ulang, limbah kertas yang tidak dikelola dengan baik dapat menyebabkan penumpukan di TPA dan mencemari lingkungan. \n\n
            •	Logam dan Kaleng : \nLimbah logam, seperti kaleng minuman, kaleng makanan, atau potongan logam lainnya, juga menjadi bagian penting dari limbah padat. Logam cenderung tahan lama dan tidak mudah terurai, namun logam seperti aluminium dan baja dapat didaur ulang secara efisien.</item>
        <item>Contoh :\n
            •   Sisa sayuran\n
            •	Kulit buah\n
            •	Daun kering\n
            •	Ranting pohon\n
            •	Ampas kopi Kulit telur\n
            •	Sisa daging atau ikan</item>
        <item>Contoh :\n
            •   Baterai bekas\n
            •   Cat yang mengandung bahan kimia berbahaya\n
            •   Limbah medis seperti jarum suntik dan obat-obatan kadaluarsa\n
            •   Limbah industri seperti oli bekas, pestisida, dan bahan kimia yang mudah terbakar\n
            •   Barang elektronik seperti papan sirkuit dan perangkat elektronik lainnya juga termasuk karena kandungan logam beratnya\n</item>
    </string-array>
    <string-array name="data_impact">
        <item>Dampak limbah cair yang tidak dikelola dengan baik sangat besar. Pencemaran air yang diakibatkannya dapat merusak ekosistem perairan, membunuh biota air, dan mengganggu keseimbangan alam. Selain itu, air yang terkontaminasi dapat menyebabkan penyakit seperti kolera, diare, dan infeksi kulit pada manusia.</item>
        <item>Limbah padat yang tidak dikelola dengan baik dapat menyebabkan berbagai dampak negatif. Misalnya, limbah kaca dan keramik yang tidak terkelola dengan benar bisa mencemari tanah dan merusak ekosistem, karena mereka tidak dapat terurai. Limbah plastik yang tersebar di alam dapat mencemari perairan, membahayakan kehidupan laut, dan menyebabkan masalah kesehatan jika dikonsumsi oleh hewan. Sampah kertas, jika tidak didaur ulang, juga bisa memperburuk deforestasi dan mencemari tanah. Limbah logam dan kaleng, jika tidak diproses dengan benar, dapat merusak lingkungan serta membebani kapasitas tempat pembuangan akhir.</item>
        <item>Jika tidak dikelola dengan baik, sampah organik dapat menimbulkan masalah lingkungan dan kesehatan. Selama proses pembusukan, sampah ini menghasilkan gas metana, yang merupakan gas rumah kaca berbahaya yang berkontribusi pada perubahan iklim. Selain itu, penumpukan sampah organik di tempat pembuangan dapat mencemari tanah dan air dengan cairan lindi yang dihasilkan. Sampah yang tidak terkelola juga menjadi tempat berkembang biaknya lalat, tikus, dan organisme penyebab penyakit.</item>
        <item>Limbah berbahaya yang tidak dikelola dengan baik dapat mencemari tanah, air, dan udara, serta menyebabkan dampak kesehatan yang serius. Misalnya, kebocoran bahan kimia beracun ke tanah dapat merusak kualitas tanah dan mencemari air tanah. Pembakaran limbah berbahaya yang tidak sesuai prosedur dapat menghasilkan gas beracun yang mencemari udara dan memengaruhi kesehatan manusia, seperti gangguan pernapasan atau bahkan keracunan. Selain itu, limbah berbahaya dapat membahayakan flora dan fauna di sekitar lingkungan pembuangan.</item>
    </string-array>
</resources>