<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.reto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_knowledge"
            app:destination="@id/navigation_detail_knowledge" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_knowledge"
            app:destination="@id/navigation_knowledge" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_news"
            app:destination="@id/navigation_news" />
    </fragment>

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="com.example.reto.ui.knowledge.KnowledgeFragment"
        android:label="@string/title_knowledge"
        tools:layout="@layout/fragment_knowledge">
        <action
            android:id="@+id/action_navigation_knowledge_to_navigation_detail_knowledge"
            app:destination="@id/navigation_detail_knowledge" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail_knowledge"
        android:name="com.example.reto.ui.knowledge.DetailKnowledgeFragment"
        android:label="@string/title_knowledge"
        tools:layout="@layout/fragment_detail_knowledge">
        <argument
            android:name="typeWaste"
            app:argType="com.example.reto.ui.knowledge.TypeWaste" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.reto.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.reto.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.reto.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>