<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvTitleAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_about"
            android:textColor="@color/darkGreen"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleAbout"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/darkGreen"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTitle"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/darkGreen"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descAbout"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/darkGreen"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>
