<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tvTitleHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/titleFragmentHome"
        android:textColor="@color/darkGreen"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDescHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/descFragmentHome"
        android:textColor="@color/darkGreen"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleKnowledge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_knowledge"
        android:textColor="@color/darkGreen"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvDescHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSeeAllKnowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/see_all"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvDescHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTitleKnowledge" />

    <TextView
        android:id="@+id/tvTitleNews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_news"
        android:textColor="@color/darkGreen"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvDescHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSeeAllKnowledge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/see_all"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvSeeAllKnowledge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTitleNews" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNews"
        android:layout_width="415dp"
        android:layout_height="670dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleNews"
        tools:layout_editor_absoluteX="-34dp"
        tools:listitem="@layout/item_news"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
