<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.scan.UploadFragment">

    <!-- Title -->
    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/letsScan"
            android:textColor="@color/darkGreen"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Preview Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPreview"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/gray"
        app:strokeColor="@color/black"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_image" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Crop Button -->
    <ImageButton
        android:id="@+id/btnCrop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/cropImage"
        android:elevation="8dp"
        android:src="@drawable/ic_crop"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="@id/cardPreview"
        app:layout_constraintEnd_toEndOf="@id/cardPreview" />

    <!-- Button and Action Area -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPreview">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/analyzeButton"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/darkGreen"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/analyze"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPreview" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/deleteImage"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_delete"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPreview" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
