<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginRight="33dp"
    android:layout_marginLeft="35dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    tools:ignore="RtlHardcoded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="229dp"
            android:layout_height="29dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/img_item_photo"
            tools:text="@string/judulNews" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="229dp"
            android:layout_height="39dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="3"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            app:layout_constraintVertical_bias="0.28"
            tools:text="@string/desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
